--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "netcore-snippets",
     "displayName": "Essential ASP.NET Core Snippets",
     "description": "Code Snippets for ASP.NET Core 2.0/2.1",
-    "version": "0.0.3",
+    "version": "0.0.5",
     "publisher": "doggy8088",
     "icon": "icon.png",
     "repository": "https://github.com/doggy8088/netcore-snippets",
@@ -11,6 +11,9 @@
     },
     "categories": [
         "Snippets"
+    ],
+    "extensionDependencies": [
+        "tintoy.msbuild-project-tools"
     ],
     "contributes": {
         "snippets": [
@@ -21,6 +24,10 @@
             {
                 "language": "json",
                 "path": "./snippets/json.json"
+            },
+            {
+                "language": "msbuild",
+                "path": "./snippets/msbuild.json"
             }
         ]
     }
