--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "netcore-snippets",
     "displayName": "Essential ASP.NET Core Snippets",
     "description": "High quality ASP.NET Core Code Snippets that boost your ASP.NET Core development productivity.",
-    "version": "0.0.9",
+    "version": "0.0.11",
     "publisher": "doggy8088",
     "icon": "icon.png",
     "repository": "https://github.com/doggy8088/netcore-snippets",
@@ -28,6 +28,10 @@
             {
                 "language": "msbuild",
                 "path": "./snippets/msbuild.json"
+            },
+            {
+                "language": "razor",
+                "path": "./snippets/razor.json"
             }
         ]
     }
